--- a/staff/templates/staff/index.html
+++ b/staff/templates/staff/index.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>{{ title }}</title>
-</head>
-<body>
-<p>Текст главной страницы</p>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block body %}
+<p>{{ body }}</p>
+{% endblock %}
