--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -139,7 +139,7 @@
                                 <header style="display:none"><h1>Breadcrumbs</h1></header>
                                 {% block breadcrumbs %}
                                     <ul>
-                                        <li><a href="{% url 'admin:index' %}">{% trans 'Home' %}</a></li>
+                                        <li><a href="{% url 'admin:index' %}">Главная</a></li>
                                         {% if title %}
                                             <li> &rsaquo; {{ title }}</li>
                                         {% endif %}
